# Computer-Architecture-LB4

./: CMakeLists.txt  README.md  makefile  npp.out
client/: client  client.cpp  client.hpp  client.py  client2.cpp  client_test_time.py  log.txt  log2.txt  makefile  test.py
example/: makefile
examples/: serialize_example.cpp  source_file  source_file.cpp
headers/: makefile  serializ  serialization.hpp  types.hpp
server/: makefile  server  server.cpp  server_asio  server_asio.cpp  task.hpp
tests/: makefile  test_server  test_server.cpp
